--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
+### vscode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### replit ###
 .replit
