--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 exclude:
-  README.md
-  .gitignore
-  scripts/build-site.js
-  package.json
-  package-lock.json
-  html/src
+  - README.md
+  - .gitignore
+  - scripts/build-site.js
+  - package.json
+  - package-lock.json
+  - html/src
