--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/matthew-occleshaw/matthew-occleshaw.github.io/issues"
   },
   "homepage": "https://github.com/matthew-occleshaw/matthew-occleshaw.github.io#readme",
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.6"
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.6",
+    "chokidar": "^3.5.1"
   }
 }
