--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Personal website  \r [Website Link](https://matthew-occleshaw.github.io/)  \r [GitHub Repository for Website](https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node scripts/build-site.js -w"
   },
   "repository": {
     "type": "git",
