--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
   },
   "homepage": "https://github.com/matthew-occleshaw/matthew-occleshaw.github.io#readme",
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.6",
-    "gulp": "^4.0.2"
-  }
+    "browser-sync": "^2.26.14",
+    "cheerio": "^1.0.0-rc.9",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-inject": "^5.0.5",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^6.0.0"
+  },
+  "dependencies": {}
 }
