--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Personal website  \r [Website Link](https://matthew-occleshaw.github.io/)  \r [GitHub Repository for Website](https://www.github.com/matthew-occleshaw/matthew-occleshaw.github.io)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scripts/build-site.js -w"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,16 +18,15 @@
   },
   "homepage": "https://github.com/matthew-occleshaw/matthew-occleshaw.github.io#readme",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "browser-sync": "^2.26.14",
-    "cheerio": "^1.0.0-rc.9",
+    "cssnano": "^5.0.2",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-inject": "^5.0.5",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-flatten": "^0.4.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "node-sass": "^6.0.0"
-  },
-  "dependencies": {}
+    "gulp-terser": "^2.0.1",
+    "gulp-webp": "^4.0.1"
+  }
 }
