--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "cssnano": "^5.0.2",
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0.0",
+    "gulp-prettier": "^3.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-terser": "^2.0.1",
     "gulp-webp": "^4.0.1",
-    "merge-stream": "^2.0.0",
     "prettier": "2.3.0"
   },
   "prettier": {
