--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "autoprefixer": "^10.2.5",
     "browser-sync": "^2.26.14",
     "cssnano": "^5.0.2",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cheerio": "^1.0.0",
-    "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0.0",
     "gulp-prettier": "^3.0.0",
     "gulp-rename": "^2.0.0",
